# menuscript

./: .gitignore  CHANGELOG.md  CREDENTIAL_TEST_FUNCTION.py  DASHBOARD_DEMO.md  INSTALL.md  INTERACTIVE_MENU_DEMO.md  INTERACTIVE_MENU_V2.md  LICENSE  README.md  install.sh  pyproject.toml  pyproject.toml.bak_cli_fix  reparse_enum4linux.py  restore_background.sh  run.sh  setup.py  setup.py.bak  test_credential_tester.py  test_integration.py  test_interactive_menu.py  test_nmap_parser.py  test_plugin_worker.py
.github/workflows/: python-ci.yml  release.yml
.safety_backup/: background_20251020_121058.py
menuscript/: config.py  devtools.py  history.py  history.py.bak  main.py  main.py.bak  main.py.bak2  main.py.broken_import  main.py.pre_jobs_upgrade  scanner.py  ui.py  ui.py.bak  ui.py.bak_t3  ui.py.pre-v050  utils.py
menuscript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
menuscript/core/: credential_tester.py  cve_matcher.py  msf_integration.py
menuscript/engine/: background.py  background.py.bak_before_logfix  base.py  loader.py  manager.py  result_handler.py
menuscript/importers/: __init__.py  msf_importer.py
menuscript/parsers/: enum4linux_parser.py  gobuster_parser.py  msf_parser.py  nikto_parser.py  nmap_parser.py  smbmap_parser.py  sqlmap_parser.py  theharvester_parser.py
menuscript/plugins/: enum4linux.py  (+9 more)
test_data/: sample_msf_export.xml
tests/: test_config_cli.py  test_gobuster_plugin.py  test_jobs.py  test_nmap_plugin.py  test_plugin_enum4linux.py  test_plugin_nikto.py  test_plugin_template.py  test_plugin_theharv.py
(+21 files in other folders)
